@@ -2030,7 +2030,7 @@ gr.GetBGRN(bits, len(bits));
 @item
 @samp{t} для рисования цилиндра вместо конуса/призмы;
 @item
-@samp{4}, @samp{6}, @samp{8}, @samp{t} для рисования квадратной, шестиугольной или восьмиугольной призмы вместо конуса;
+@samp{4}, @samp{6}, @samp{8} для рисования квадратной, шестиугольной или восьмиугольной призмы вместо конуса;
 @item
 @samp{<}, @samp{^} или @samp{>} для выравнивания конусов влево, вправо или по центру относительно их координат.
 @end itemize
